# tavla

./: .babelrc  .browserslistrc  .env.development  .env.prod  .env.staging  .eslintrc  .firebaserc  .gitignore  .graphqlconfig  .prettierignore  .snyk  .stylelintrc  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  POC_PLAN.md  QUICK_START.md  README.md  SelectionPanel.jsx  biome.json  codegen.ts  ent-tavla-dev_remove_last_active_log.txt  firebase.json  firestore.indexes.json  firestore.rules  flake.nix  manifest.json  mise.toml  package-lock.json  package.json  populate.js  releases.md  rust-toolchain  storage.rules  stylelint.config.js  sw.js  tsconfig.json  webpack.config.js
.circleci/: config.yml
.github/: CODEOWNERS  codeql.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit
backend/: .dockerignore  Cargo.toml  Dockerfile  dump.rdb  readme.md  redis-master.conf  redis-replica.conf  run-local.sh  start-redis.sh  stop-redis.sh
backend/helm/backend/: Chart.yaml  kub_local.yaml  values.yaml
backend/helm/backend/charts/: common-1.18.4.tgz  common-1.19.0.tgz  common-1.21.1.tgz
backend/helm/backend/env/: dev.yaml  prd.yaml  values-kub-ent-dev.yaml  values-kub-ent-prd.yaml  values-local.yaml
backend/helm/redis/: values.yaml
backend/src/: active.json  fredrik.rs  main.rs  types.rs  utils.rs
docs/: EXPLORER_LINKS.md  database.md  graphql.md  logging.md
functions/: package-lock.json  package.json  tsconfig.json
graphql-generated/: journey-planner-v3.ts  mobility-v2.ts  vehicles-v1.ts
graphql-schemas/: ApiDirective.graphql  journey-planner-v2.graphql  journey-planner-v3.graphql  journey-planner-v3.json  mobility-v2.json  mobility.graphql  vehicles.graphql
next-tavla/: .babelrc  .env.development  .eslintrc.json  .firebaserc  .gitignore  .prettierignore  .yarnrc.yml  Dockerfile  cloudbuild.yaml  codegen.ts  cypress.config.ts  firebase.json  firestore.rules  graphql.config.json  jest.config.mjs  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
redirect/: Cargo.toml  Dockerfile
redirect/src/: main.rs
scripts/: postinstall.js  postinstall.sh
src/: app.jsx  auth.ts  constants.js  constants.ts  firebase-init.ts  hooks.js  hooks.ts  index.html  main.jsx  main.scss  main.tsx  posthog.ts  routes.js  routes.jsx  routes.tsx  service.js  service.ts  settings.ts  wdyr.ts  (+6 more)
(+3603 files in other folders)
