[package]
name = "redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.0"
hyper = {version = "1.1.0", features = ["full"]}
hyper-util = { version = "0.1.3", features =["full"]}
tokio = {version = "1.36.0", features = ["full"] }
