[package]
name = "redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"] }
hyper = {version = "1.1.0", features = ["full"]}
axum = "0.7.4"
tower = {version = "0.4.13", features = ['make']}
